--- a/.github/workflows/buildProject.yml
+++ b/.github/workflows/buildProject.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: macos-15
     env:
       SCHEME: KemonoViewer
     steps:
@@ -21,7 +21,7 @@ jobs:
             -resolvePackageDependencies
       - name: Archive with clean
         run: |
-          cd ./$SCHEME
+          cd $SCHEME
           xcodebuild clean archive \
             -scheme "$SCHEME" \
             -configuration Release \
