--- a/.github/workflows/buildProject.yml
+++ b/.github/workflows/buildProject.yml
@@ -29,6 +29,7 @@ jobs:
             -archivePath "$PWD/build/$SCHEME.xcarchive"
       - name: Zip & upload to GitHub Release
         run: |
+          cd $SCHEME
           ls $PWD/build/$SCHEME.xcarchive
           ls $PWD/build/$SCHEME.xcarchive/Products
           ls $PWD/build/$SCHEME.xcarchive/Products/Applications
