--- a/.github/workflows/buildProject.yml
+++ b/.github/workflows/buildProject.yml
@@ -29,11 +29,7 @@ jobs:
             -archivePath "$PWD/build/$SCHEME.xcarchive"
       - name: Zip & upload to GitHub Release
         run: |
-          cd $SCHEME
-          ls $PWD/build/$SCHEME.xcarchive
-          ls $PWD/build/$SCHEME.xcarchive/Products
-          ls $PWD/build/$SCHEME.xcarchive/Products/Applications
-          zip -r "$SCHEME-macos.zip" "$PWD/build/$SCHEME.xcarchive/Products/Applications/$SCHEME.app"
+          zip -r "$SCHEME-macos.zip" "$PWD/$SCHEME/build/$SCHEME.xcarchive/Products/Applications/$SCHEME.app"
       - uses: softprops/action-gh-release@v2
         with:
           files: $SCHEME-macos.zip
