--- a/.github/workflows/buildProject.yml
+++ b/.github/workflows/buildProject.yml
@@ -29,7 +29,7 @@ jobs:
             -archivePath "$PWD/build/$SCHEME.xcarchive"
       - name: Zip & upload to GitHub Release
         run: |
-          zip -r "KemonoViewer-macos.zip" "$PWD/$SCHEME/build/$SCHEME.xcarchive/Products/Applications/$SCHEME.app"
+          zip -r "KemonoViewer-macos.zip" "$SCHEME/build/$SCHEME.xcarchive/Products/Applications/$SCHEME.app"
       - uses: softprops/action-gh-release@v2
         with:
           files: KemonoViewer-macos.zip
